# lib_cli_exit_tools

./: .data_arch_violations.json  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  INSTALL.md  Makefile  README.md  pyproject.toml
.claude/commands/: tfbp.md
.codacy/: cli.sh
.github/workflows/: ci.yml  ci.yml.bak  ci.yml_backup  release.yml
docs/system-design/: module_reference.md  reference.md
notebooks/: Quickstart.ipynb
packaging/: README.md
packaging/brew/Formula/: lib-cli-exit-tools.rb
packaging/conda/recipe/: build.sh  meta.yaml
packaging/nix/: flake.nix
scripts/: __main__.py  _utils.py  cli.py  menu.py  push.py  test.py
src/lib_cli_exit_tools/: __init__.py  __init__conf__.py  cli.py  lib_cli_exit_tools.py
src/lib_cli_exit_tools/adapters/: signals.py
src/lib_cli_exit_tools/application/: runner.py
src/lib_cli_exit_tools/cli/: __init__.py  commands.py  group.py  styling.py
src/lib_cli_exit_tools/core/: configuration.py  exit_codes.py
tests/: conftest.py  test_cli.py  test_core_configuration.py  test_core_exit_codes.py  test_exit_tools.py  test_lib_extra.py  test_metadata.py  test_signals_integration.py
tests/adapters/: test_signals.py
tests/application/: test_runner.py  test_runner_poetry.py  test_signal_poetry_windows.py
tests/cli/: test_cli_entrypoints.py
tests/core/: test_configuration.py  test_exit_codes.py
tools/: bump_version.py
