[project]
name = "lib_cli_exit_tools"
version = "2.2.4"
description = "CLI exit handling helpers: clean signals, exit codes, and error printing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["rich-click>=1.9.6"]
license = { text = "MIT" }
authors = [{ name = "bitranox", email = "bitranox@gmail.com" }]
keywords = ["cli", "exit", "signals", "errors", "click"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/bitranox/lib_cli_exit_tools"
Repository = "https://github.com/bitranox/lib_cli_exit_tools.git"
Issues = "https://github.com/bitranox/lib_cli_exit_tools/issues"

[project.optional-dependencies]
dev = [
  "build>=1.4.0",
  "codecov-cli>=11.2.6",
  "coverage[toml]>=7.13.2",
  "hypothesis>=6.151.2",
  "import-linter>=2.9",
  "bandit>=1.9.3",
  "pip-audit>=2.10.0",
  "pyright[nodejs]>=1.1.408",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.14",
  "textual>=7.4.0",
  "rtoml>=0.13.0",
  "twine>=6.2.0"
]

[project.scripts]
lib_cli_exit_tools = "lib_cli_exit_tools.cli:main"
# Friendly alias (optional):
cli-exit-tools = "lib_cli_exit_tools.cli:main"
lib-cli-exit-tools = "lib_cli_exit_tools.cli:main"

[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib_cli_exit_tools"]
include = ["src/lib_cli_exit_tools/py.typed"]

[tool.ruff]
line-length = 160
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# ignore the "unused import sys" in the jupyter notebook - which we need (it is a linter hickup)
"notebooks/*.ipynb" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
exclude = [
  "scripts/",
]

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
pythonpath = ["src"]
testpaths = ["src", "tests"]
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
markers = [
  "os_agnostic: test exercises behavior that is the same on every operating system",
  "posix_only: test applies only to POSIX-style operating systems",
  "windows_only: test applies only to Windows operating systems",
  "macos_only: test applies only to macOS operating systems",
]

[tool.coverage.run]
branch = true
parallel = false
data_file = ".coverage.unit"
source = ["src/lib_cli_exit_tools"]

[tool.coverage.report]
omit = [
  "tests/*",
]
fail_under = 85
show_missing = true

[tool.clean]
# Patterns to remove when running `make clean` or `python -m scripts clean`
patterns = [
  ".hypothesis",
  ".import_linter_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".pyright",
  ".mypy_cache",
  ".tox",
  ".nox",
  ".eggs",
  "*.egg-info",
  "build",
  "dist",
  "htmlcov",
  ".coverage",
  "coverage.xml",
  "codecov.sh",
  ".cache",
  "result",
]

[tool.git]
# Default git remote for push/release commands
default-remote = "origin"


[tool.scripts.test]
# Configuration for scripts/test.py test runner
pytest-verbosity = "-vv"
coverage-report-file = "coverage.xml"
src-path = "src"
[tool.importlinter]
root_package = "lib_cli_exit_tools"

[[tool.importlinter.contracts]]
name = "Core isolation"
type = "forbidden"
source_modules = [
  "lib_cli_exit_tools.core",
]
forbidden_modules = [
  "lib_cli_exit_tools.application",
  "lib_cli_exit_tools.adapters",
  "lib_cli_exit_tools.cli",
  "lib_cli_exit_tools.lib_cli_exit_tools",
]

[[tool.importlinter.contracts]]
name = "Application avoids CLI layer"
type = "forbidden"
source_modules = [
  "lib_cli_exit_tools.application",
]
forbidden_modules = [
  "lib_cli_exit_tools.cli",
]

[tool.pip-audit]
# Known vulnerabilities to ignore (unfixable or accepted risk)
# GHSA-4xh5-x5gv-qwph: py library ReDoS (no fix available, low risk)
# PYSEC-2022-42969: same as above (alias)
# PYSEC-2022-43012, CVE-2024-6345, PYSEC-2025-49: setuptools vulnerabilities
#   These are build-time dependencies only, not runtime. The virtual environment
#   setuptools version is managed by the CI environment/pip itself.
# CVE-2025-68146: filelock <3.20.1 vulnerability, transitive dev dependency
#   Will be resolved when upstream packages update their dependencies.
# CVE-2026-23949: jaraco-context <6.1.0, transitive dev dependency
# CVE-2025-69277: pynacl <1.6.2, transitive dev dependency
# CVE-2026-21441: urllib3 <2.6.3, transitive dev dependency
# CVE-2026-22702: virtualenv <20.36.1, transitive dev dependency
# CVE-2026-24049: wheel <0.46.2, build-time dependency
ignore-vulns = [
  "GHSA-4xh5-x5gv-qwph",
  "PYSEC-2022-42969",
  "PYSEC-2022-43012",
  "CVE-2024-6345",
  "PYSEC-2025-49",
  "CVE-2025-68146",
  "CVE-2026-23949",
  "CVE-2025-69277",
  "CVE-2026-21441",
  "CVE-2026-22702",
  "CVE-2026-24049",
]
